--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ defaults:
       level: 1
       title: 
       author: "Siqi Tian"
+      ga_tracker: UA-36037648-4
   -
     scope:
       path: "biers"
