add empty title to index

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: DasLab
-email: rhiju@stanford.edu
+email: ribokit.info@gmail.com
 description: ""
 baseurl: ""
 url: "http://daslab.github.io"
@@ -18,7 +18,7 @@ defaults:
     values:
       layout: "default"
       level: 1
-      title: 
+      title: ""
       author: "Siqi Tian"
       ga_tracker: UA-36037648-4
   -
